{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 71,
  "lineage": "95eb076b-4e69-cd43-e899-82d19f561512",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:internet-gateway/igw-0ab1d76d8d18d03d6",
            "id": "igw-0ab1d76d8d18d03d6",
            "owner_id": "750246861878",
            "tags": {
              "Name": "ictbit-n8n-dev-igw"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-igw",
              "Project": "ictbit-n8n"
            },
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:loadbalancer/app/ictbit-n8n-alb/224e30bcf4e73a1c",
            "arn_suffix": "app/ictbit-n8n-alb/224e30bcf4e73a1c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ictbit-n8n-alb-707229798.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:loadbalancer/app/ictbit-n8n-alb/224e30bcf4e73a1c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ictbit-n8n-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0778a21d0ee4751e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014a233ed7359e398"
              },
              {
                "subnet_id": "subnet-026c71327677dd406"
              }
            ],
            "subnets": [
              "subnet-014a233ed7359e398",
              "subnet-026c71327677dd406"
            ],
            "tags": {
              "Name": "ictbit-n8n-alb"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-alb",
              "Project": "ictbit-n8n"
            },
            "vpc_id": "vpc-0c361fab393e3705e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:listener/app/ictbit-n8n-alb/224e30bcf4e73a1c/fdc7baf1dd00f9fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:targetgroup/ictbit-n8n-tg/e077a98b5ce34e89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:listener/app/ictbit-n8n-alb/224e30bcf4e73a1c/fdc7baf1dd00f9fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:loadbalancer/app/ictbit-n8n-alb/224e30bcf4e73a1c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ictbit-n8n"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.n8n",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:targetgroup/ictbit-n8n-tg/e077a98b5ce34e89",
            "arn_suffix": "targetgroup/ictbit-n8n-tg/e077a98b5ce34e89",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:750246861878:targetgroup/ictbit-n8n-tg/e077a98b5ce34e89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:750246861878:loadbalancer/app/ictbit-n8n-alb/224e30bcf4e73a1c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ictbit-n8n-tg",
            "port": 5678,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ictbit-n8n-tg"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-tg",
              "Project": "ictbit-n8n"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab1d76d8d18d03d6",
            "id": "r-rtb-05d7066ccfed0baf31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d7066ccfed0baf3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:route-table/rtb-0c951ec5f5b2da9cb",
            "id": "rtb-0c951ec5f5b2da9cb",
            "owner_id": "750246861878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ictbit-n8n-dev-private-rt-1"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-private-rt-1",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:route-table/rtb-0435df6f7ad481a42",
            "id": "rtb-0435df6f7ad481a42",
            "owner_id": "750246861878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ictbit-n8n-dev-private-rt-2"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-private-rt-2",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:route-table/rtb-05d7066ccfed0baf3",
            "id": "rtb-05d7066ccfed0baf3",
            "owner_id": "750246861878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab1d76d8d18d03d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ictbit-n8n-dev-public-rt"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-public-rt",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fe0c179d1037ab",
            "route_table_id": "rtb-0c951ec5f5b2da9cb",
            "subnet_id": "subnet-0b87c619d4ba03bd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cf0179d25eeb821",
            "route_table_id": "rtb-0435df6f7ad481a42",
            "subnet_id": "subnet-0a3cb300bfa89616e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db110d5fa0d8c3bc",
            "route_table_id": "rtb-05d7066ccfed0baf3",
            "subnet_id": "subnet-014a233ed7359e398"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cd1bead734df25f",
            "route_table_id": "rtb-05d7066ccfed0baf3",
            "subnet_id": "subnet-026c71327677dd406"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:security-group/sg-0778a21d0ee4751e3",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0778a21d0ee4751e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.125.229.173/32"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "77.125.229.173/32"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ictbit-n8n-alb-sg",
            "name_prefix": "",
            "owner_id": "750246861878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:security-group/sg-066d865fc7fa6e72c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066d865fc7fa6e72c",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.125.229.173/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "n8n access from ALB",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0778a21d0ee4751e3"
                ],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "ictbit-n8n-ec2-sg",
            "name_prefix": "",
            "owner_id": "750246861878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:security-group/sg-0cc78dd3a13b53377",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc78dd3a13b53377",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066d865fc7fa6e72c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ictbit-n8n-rds-sg",
            "name_prefix": "",
            "owner_id": "750246861878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "ictbit-n8n"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:subnet/subnet-0b87c619d4ba03bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b87c619d4ba03bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750246861878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ictbit-n8n-dev-private-subnet-1",
              "Tier": "private"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-private-subnet-1",
              "Project": "ictbit-n8n",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:subnet/subnet-0a3cb300bfa89616e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3cb300bfa89616e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750246861878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ictbit-n8n-dev-private-subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-private-subnet-2",
              "Project": "ictbit-n8n",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:subnet/subnet-014a233ed7359e398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a233ed7359e398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750246861878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ictbit-n8n-dev-public-subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-public-subnet-1",
              "Project": "ictbit-n8n",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:subnet/subnet-026c71327677dd406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026c71327677dd406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750246861878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ictbit-n8n-dev-public-subnet-2",
              "Tier": "public"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-public-subnet-2",
              "Project": "ictbit-n8n",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c361fab393e3705e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750246861878:vpc/vpc-0c361fab393e3705e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf3728a929cd6474",
            "default_route_table_id": "rtb-0b9a6b10384ac14a3",
            "default_security_group_id": "sg-0748566e5445caa15",
            "dhcp_options_id": "dopt-0bf92542b1027c10b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c361fab393e3705e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9a6b10384ac14a3",
            "owner_id": "750246861878",
            "tags": {
              "Name": "ictbit-n8n-dev-vpc"
            },
            "tags_all": {
              "Challenge": "ICTBIT-DevOps",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "ictbit-n8n-dev-vpc",
              "Project": "ictbit-n8n"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}